testsuite/tests/grammar/invalid_unparser/several-2.lkt
import lexer_example

grammar foo_grammar {
    @main_rule main_rule <- Root(or(
        Identifier(@identifier)
        | Identifier(@example)
        | Number(@number)
    ))
}
